[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archimedes"
version = "1.0.0"
description = "Encrypt text with a passphrase and hide it inside an image using LSB steganography."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoav Yoscovitz" },
]
requires-python = ">=3.10"
keywords = ["steganography", "cryptography", "lsb", "image", "privacy", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "cryptography>=42.0.0",
    "Pillow>=10.0.0",
    "customtkinter>=5.2.0",
]

[project.scripts]
archimedes = "archimedes.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/archimedes"]

[tool.hatch.build.targets.wheel.shared-data]
"assets" = "archimedes/assets"
